--- a/food/package.json
+++ b/food/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.18",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^14.0.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.5"
   },
